# rust-facomp

./: .gitignore  .nfs000000000050c41e000000e6  Cargo.toml
examples/: hello_world.cl
src/: backend.rs  frontend.rs  lib.rs  main.rs  optimizer.rs
src/backend/: asm.rs  builtin.rs  function.rs  trait.rs  traits.rs
src/backend/archs/: x86_64.rs
src/backend/archs/x86_64/: asm.rs  function.rs  generate.rs
src/backend/archs/x86_64/builtin/: helper.rs  print.rs
src/backend/archs/x86_64/function/: conditionals.rs  expression.rs  variables.rs
src/backend/builtin/: helper.rs  print.rs
src/backend/function/: expression.rs  variables.rs
src/frontend/: ir.rs  lexer.rs
src/frontend/ir/: parse_arguments.rs  parse_expression.rs  parse_inner.rs  parse_passed_args.rs  pretty_print.rs
src/frontend/ir/parse_inner/: parse_builtin.rs  parse_identifier.rs  parse_if.rs  parse_primitive.rs  parse_while.rs
src/frontend/lexer/: tokenize.rs
src/optimizer/: const_prop.rs
