[package]
name = "facompiler"
version = "0.1.0"
authors = ["lol3rrr <s.loler03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.8.3" }
log = { version = "0.4.14" }
rand = { version = "0.8.3" }
